k8s/hello-deployment.yaml
# k8s/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello
        image: khushii007/hello-docker-app:latest
        ports:
        - containerPort: 8080
