k8s/hello-service.yaml
# k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 30080
